[2026.01.06] backend refactoring